# my_foxglove_sdk

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.sisyphus/plans/: 2026-03-25-my-foxglove-sdk.md
cmake/: dependencies.cmake
docs/: 00-前言与项目概览.md  01-项目骨架与代码规范.md  02-Foxglove协议解析.md  03-Channel与Schema抽象.md  04-WebSocket服务器.md  05-消息序列化.md  06-Context与Sink路由.md  07-MCAP文件写入.md  08-内置消息类型.md  09-端到端连接Foxglove-Studio.md
docs/superpowers/plans/: 2026-03-25-my-foxglove-sdk.md  2026-03-28-tutorial-writing.md
docs/superpowers/specs/: 2026-03-25-my-foxglove-sdk-tutorial-design.md  2026-03-28-tutorial-design.md
docs/tutorial/: README.md  ch01-skeleton.md  ch02-protocol.md  ch03-channel.md  ch04-server.md  ch05-serialization.md  ch06-context.md  ch07a-mcap-basic.md  ch07b-mcap-full.md  ch08-messages.md  ch09-e2e.md
examples/ch01_skeleton/: CMakeLists.txt  main.cpp
examples/ch02_protocol/: CMakeLists.txt  main.cpp
examples/ch03_channel/: CMakeLists.txt  main.cpp
examples/ch04_server/: CMakeLists.txt  main.cpp
examples/ch05_serialization/: CMakeLists.txt  main.cpp
examples/ch06_context/: CMakeLists.txt  main.cpp
examples/ch07_mcap/: CMakeLists.txt  main.cpp
examples/ch08_messages/: CMakeLists.txt  main.cpp
examples/ch09_e2e/: CMakeLists.txt  main.cpp
include/foxglove/: channel.hpp  context.hpp  error.hpp  mcap.hpp  messages.hpp  protocol.hpp  schema.hpp  server.hpp
src/: channel.cpp  context.cpp  error.cpp  mcap.cpp  messages.cpp  protocol.cpp  server.cpp
tests/: CMakeLists.txt  test_channel.cpp  test_context.cpp  test_e2e.cpp  test_error.cpp  test_mcap.cpp  test_messages.cpp  test_messages_ch08.cpp  test_protocol.cpp  test_server.cpp
tests/golden/: arrow_primitive.json  color.json  compressed_image.json  cube_primitive.json  cylinder_primitive.json  frame_transform.json  line_primitive.json  log.json  pose.json  quaternion.json  scene_entity.json  scene_entity_deletion.json  scene_update.json  sphere_primitive.json  timestamp.json  vector3.json
